--- a/manifest.json
+++ b/manifest.json
@@ -8,10 +8,11 @@
   "categories": [],
   "dependencies": {
     "vtex.broadcaster": "0.x",
-    "vtex.messages":"1.x"
+    "vtex.messages": "1.x"
   },
   "builders": {
-    "node": "4.x"
+    "node": "4.x",
+    "docs": "0.x"
   },
   "scripts": {
     "prereleasy": "bash lint.sh"
