--- a/node/package.json
+++ b/node/package.json
@@ -1,7 +1,5 @@
 {
   "dependencies": {
-    "@vtex/api": "3.34.0",
-    "@vtex/vbase": "^0.1.0",
     "crypto": "^1.0.1",
     "koa-compose": "^4.0.0",
     "ramda": "^0.25.0"
@@ -10,7 +8,7 @@
     "@types/koa-compose": "^3.2.0",
     "@types/node": "8.x",
     "@types/ramda": "types/npm-ramda#dist",
-    "@vtex/api": "3.34.0",
+    "@vtex/api": "^3.48.0",
     "tslint": "^5.14.0",
     "tslint-config-vtex": "^2.1.0",
     "typescript": "3.5.2"
