--- a/manifest.json
+++ b/manifest.json
@@ -37,6 +37,9 @@
       "name": "graphql-query"
     },
     {
+      "name": "vtex.messages:graphql-save-translation-messages"
+    },
+    {
       "name": "outbound-access",
       "attrs": {
         "host": "portal.vtexcommercestable.com.br",
