--- a/node/package.json
+++ b/node/package.json
@@ -15,5 +15,6 @@
   },
   "scripts": {
     "lint": "tsc --noEmit --pretty && tslint -c tslint.json --fix './**/*.ts'"
-  }
+  },
+  "version": "0.1.1"
 }
