--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,8 @@
     "vtex.messages": "1.x"
   },
   "builders": {
-    "node": "4.x"
+    "node": "4.x",
+    "docs":  "0.x"
   },
   "scripts": {
     "prereleasy": "bash lint.sh"
