Add pageType discovery to search canonicals indexing

--- a/node/package.json
+++ b/node/package.json
@@ -2,12 +2,12 @@
   "dependencies": {
     "crypto": "^1.0.1",
     "koa-compose": "^4.0.0",
-    "ramda": "^0.25.0"
+    "ramda": "^0.26.1"
   },
   "devDependencies": {
     "@types/koa-compose": "^3.2.0",
     "@types/node": "^12.12.17",
-    "@types/ramda": "types/npm-ramda#dist",
+    "@types/ramda": "^0.26.38",
     "@vtex/api": "^3.66.0",
     "tslint": "^5.14.0",
     "tslint-config-vtex": "^2.1.0",
