--- a/manifest.json
+++ b/manifest.json
@@ -10,6 +10,7 @@
     "vtex.messages": "1.x",
     "vtex.catalog-api-proxy": "0.x",
     "vtex.search-graphql": "0.x",
+    "vtex.catalog-graphql": "1.x",
     "vtex.rewriter": "1.x"
   },
   "builders": {
