--- a/node/tsconfig.json
+++ b/node/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "compilerOptions": {
-    "types": ["node"],
-    "typeRoots": ["node_modules/@types"],
+    "types": [
+      "node"
+    ],
+    "typeRoots": [
+      "node_modules/@types"
+    ],
     "target": "es2017",
     "module": "commonjs",
     "moduleResolution": "node",
@@ -23,6 +27,11 @@
   "typeAcquisition": {
     "enable": false
   },
-  "include": ["global.ts", "./**/*"],
-  "exclude": ["node_modules"]
+  "include": [
+    "global.ts",
+    "./**/*"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
