--- a/node/package.json
+++ b/node/package.json
@@ -2,21 +2,23 @@
   "dependencies": {
     "crypto": "^1.0.1",
     "koa-compose": "^4.0.0",
-    "ramda": "^0.26.1"
+    "ramda": "^0.26.1",
+    "route-parser": "^0.0.5"
   },
   "devDependencies": {
     "@types/koa-compose": "^3.2.0",
     "@types/node": "^12.12.17",
     "@types/ramda": "^0.26.38",
-    "@vtex/api": "^3.7.0",
+    "@types/route-parser": "^0.1.3",
+    "@vtex/api": "^3.66.0",
     "tslint": "^5.14.0",
     "tslint-config-vtex": "^2.1.0",
     "typescript": "3.7.3",
-    "vtex.rewriter": "http://vtex.vteximg.com.br/_v/public/typings/v1/vtex.rewriter@1.22.5/public/@types/vtex.rewriter",
-    "vtex.search-graphql": "http://vtex.vteximg.com.br/_v/public/typings/v1/vtex.search-graphql@0.14.0/public/@types/vtex.search-graphql",
-    "vtex.messages": "http://vtex.vteximg.com.br/_v/public/typings/v1/vtex.messages@1.49.0/public/@types/vtex.messages",
+    "vtex.catalog-api-proxy": "http://vtex.vteximg.com.br/_v/public/typings/v1/vtex.catalog-api-proxy@0.6.0/public/_types/react",
     "vtex.catalog-graphql": "http://vtex.vteximg.com.br/_v/public/typings/v1/vtex.catalog-graphql@1.58.2/public/@types/vtex.catalog-graphql",
-    "vtex.catalog-api-proxy": "http://vtex.vteximg.com.br/_v/public/typings/v1/vtex.catalog-api-proxy@0.6.0/public/_types/react"
+    "vtex.messages": "http://vtex.vteximg.com.br/_v/public/typings/v1/vtex.messages@1.49.0/public/@types/vtex.messages",
+    "vtex.rewriter": "http://vtex.vteximg.com.br/_v/public/typings/v1/vtex.rewriter@1.22.5/public/@types/vtex.rewriter",
+    "vtex.search-graphql": "http://vtex.vteximg.com.br/_v/public/typings/v1/vtex.search-graphql@0.14.0/public/@types/vtex.search-graphql"
   },
   "scripts": {
     "lint": "tsc --noEmit --pretty && tslint -c tslint.json --fix './**/*.ts'"
