--- a/node/tsconfig.json
+++ b/node/tsconfig.json
@@ -1,16 +1,13 @@
 {
   "compilerOptions": {
-    "types": [
-      "node"
-    ],
-    "typeRoots": [
-      "node_modules/@types"
-    ],
+    "types": ["node"],
+    "typeRoots": ["node_modules/@types"],
     "target": "es2017",
     "module": "commonjs",
     "moduleResolution": "node",
     "allowJs": false,
-    "allowSyntheticDefaultImports": false,
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
     "noEmitOnError": true,
     "noImplicitReturns": true,
     "noUnusedLocals": true,
@@ -21,17 +18,11 @@
     "skipLibCheck": true,
     "strictNullChecks": true,
     "strictFunctionTypes": true,
-    "strictPropertyInitialization": true,
-    "esModuleInterop": true
+    "strictPropertyInitialization": true
   },
   "typeAcquisition": {
     "enable": false
   },
-  "include": [
-    "global.ts",
-    "./**/*"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["./**/*.ts"],
+  "exclude": ["node_modules"]
 }
