--- a/node/tsconfig.json
+++ b/node/tsconfig.json
@@ -6,6 +6,7 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "allowJs": false,
+    "checkJs": false,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "noEmitOnError": true,
