--- a/node/package.json
+++ b/node/package.json
@@ -10,16 +10,16 @@
     "@types/node": "^12.12.17",
     "@types/ramda": "^0.26.38",
     "@types/route-parser": "^0.1.3",
-    "@vtex/api": "6.30.1",
+    "@vtex/api": "6.31.1",
     "tslint": "^5.14.0",
     "tslint-config-vtex": "^2.1.0",
     "typescript": "3.8.3",
-    "vtex.catalog-api-proxy": "http://vtex.vteximg.com.br/_v/public/typings/v1/vtex.catalog-api-proxy@0.7.2/public/_types/react",
-    "vtex.catalog-graphql": "http://vtex.vteximg.com.br/_v/public/typings/v1/vtex.catalog-graphql@1.68.0/public/@types/vtex.catalog-graphql",
-    "vtex.messages": "http://vtex.vteximg.com.br/_v/public/typings/v1/vtex.messages@1.59.2/public/@types/vtex.messages",
-    "vtex.rewriter": "http://vtex.vteximg.com.br/_v/public/typings/v1/vtex.rewriter@1.35.1/public/@types/vtex.rewriter",
-    "vtex.search-graphql": "http://vtex.vteximg.com.br/_v/public/typings/v1/vtex.search-graphql@0.21.1/public/@types/vtex.search-graphql",
-    "vtex.store-indexer": "http://vtex.vteximg.com.br/_v/public/typings/v1/vtex.store-indexer@0.9.4/public/_types/react"
+    "vtex.catalog-api-proxy": "http://vtex.vtexassets.com/_v/public/typings/v1/vtex.catalog-api-proxy@0.9.0/public/_types/react",
+    "vtex.catalog-graphql": "http://vtex.vtexassets.com/_v/public/typings/v1/vtex.catalog-graphql@1.79.2/public/@types/vtex.catalog-graphql",
+    "vtex.messages": "http://vtex.vtexassets.com/_v/public/typings/v1/vtex.messages@1.60.2/public/@types/vtex.messages",
+    "vtex.rewriter": "http://vtex.vtexassets.com/_v/public/typings/v1/vtex.rewriter@1.45.2/public/@types/vtex.rewriter",
+    "vtex.search-graphql": "http://vtex.vtexassets.com/_v/public/typings/v1/vtex.search-graphql@0.27.2/public/_types/react",
+    "vtex.store-indexer": "http://vtex.vtexassets.com/_v/public/typings/v1/vtex.store-indexer@0.15.2/public/_types/react"
   },
   "scripts": {
     "lint": "tsc --noEmit --pretty && tslint -c tslint.json --fix './**/*.ts'"
